k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: rodobkn/multi-worker
          env:                  #We are setting up the environment variables
            - name: REDIS_HOST
              value: redis-cluster-ip-service
            - name: REDIS_PORT
              value: '6379' # In the env variables you need to provide only strings
  
# it's important to remember that we don't need to use ports
# because other containers don't need to comunicate to this
# worker container. So we don't need clusterIp as well.
